MacViews: Fix sending mouse exit event and releasing capture on D&D.

Currently, clicks immediately after a drag in a MacViews window are
ignored. This is because initiating a drag and drop session with
-[NSView beginDraggingSessionWithItems:..] suppresses the mouse events
that would result in capture being released. To fix, explicitly release
Widget capture before starting the dragging session.

BUG=646792

Review-Url: https://codereview.chromium.org/2337233004
Cr-Commit-Position: refs/heads/master@{#420925}

Former-commit-id: 48134b46f0a22980774d9b9cb074e04b4971ada5